[package]
name = "nes7-bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.1", default_features = false }
bevy_pixels = "0.4.0"
nes7-core = { path = "../nes7-core" }
resources = "1.1.0"
